--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
-    <h1 id="título">HINOS DO MUNDO: a MÚsica que une nações </h1><br><br>
+    <div class="content">
+    <h1 id="título">HINOS DO MUNDO </h1><br><br>
 
-<a href="brasil.html">Brasil</a>
-<a href="estadosunidos.html">Estados Unidos</a>
-<a href="franca.html">França</a>
-<a href="alemanha.html">Alemanha</a>
-<a href="japao.html">Japão</a>
-<a href="russia.html">Rússia</a>
-<a href="china.html">China</a>
-<a href="bolivia.html">Bolívia</a>
-<a href="italia.html">Itália</a>
-<a href="portugal.html">Portugal</a>
+<a href="brasil.html">BRASIL</a><br><br>
+<a href="estadosunidos.html">ESTADOS UNIDOS</a><br><br>
+<a href="franca.html">FRANÇA</a><br><br>
+<a href="alemanha.html">ALEMANHA</a><br><br>
+<a href="japao.html">JAPÃO</a><br><br>
+<a href="russia.html">RÚSSIA</a><br><br>
+<a href="china.html">CHINA</a><br><br>
+<a href="bolivia.html">BOLÍVIA</a><br><br>
+<a href="italia.html">ITÁLIA</a><br><br>
+<a href="portugal.html">PORTUGAL</a><br><br>
 
-    
+</div>
 </body>
 </html>
